--- a/css/main.css
+++ b/css/main.css
@@ -51,13 +51,11 @@ body {
 .section2 img {
 	position: relative;
 	left: 50%;
-	margin-left: -375px;
-<<<<<<< HEAD
-	
+	margin-left: -375px;	
 }
 
 #footer .main-content {
-    padding: 68px;
+    padding: 0 68px 68px 68px;
     text-align: center;
     background-color: #093a3f;
     color: #fff;
@@ -105,14 +103,21 @@ body {
 .contact-container {
     text-align: left;
     margin-top: 120px;
+    font-size: 18px;
+}
+
+.contact-container p {
+    margin: 18px 0;
 }
 
 .qf-code {
     vertical-align: top;
     text-align: center;
     display: inline-block;
-    margin-top: 1em;
     margin-left: 25%;
+}
+.qf-container {
+    padding: 23px 17px 17px 17px;
 }
 
 .qf-code img {
@@ -183,3 +188,73 @@ body {
 .section4 img {
 	width: 100%;
 }
+
+.journey {
+    position: relative;
+    overflow: hidden;
+}
+
+.journey img {
+    width: 100%;
+}
+
+.start-journey {
+    background-color: transparent;
+    text-align: center;
+    position: absolute;
+    bottom: 18%;
+    width: 100%;
+}
+
+.start-journey a {
+    background-color: #fff;
+    border-color: #fff;
+    color: #000;
+    border-radius: 300px;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    outline: none;
+    -webkit-appearance: none;
+    display: inline-block;
+    padding: 25px 46px;
+    font-size: 20px;
+    letter-spacing: 3px;
+}
+
+.start-journey a:hover {
+    text-decoration: none;
+    color: #000;
+    background-color: rgba(255,255,255,0.8);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
