--- a/css/main.css
+++ b/css/main.css
@@ -132,7 +132,7 @@ body {
 
 .contact-container {
     text-align: left;
-    margin-top: 120px;
+    padding-top: 60px;
     font-size: 18px;
 }
 
@@ -256,6 +256,43 @@ body {
     text-decoration: none;
     color: #000;
     background-color: rgba(255,255,255,0.8);
+}
+
+.float-qr {
+  position: fixed;
+  bottom: 0;
+  height: 120px;
+  z-index: 1000;
+  width: 100%;
+}
+
+.mask {
+  position: absolute;
+  background-color: #000;
+  opacity: 0.8;
+  width: 100%;
+  height: 100%;
+}
+
+.float-qr .text-content {
+  color: white;
+  position: absolute;
+  font-size: 20px;
+  padding: 40px 60px;
+}
+
+.float-qr .img-wrapper {
+  position: absolute;
+  display: inline-block;
+  right: 150px;
+  bottom: 0;
+  padding: 20px;
+  background-color: rgba(0,0,0,0.8);
+}
+
+.float-qr .img-wrapper img {
+  width: 130px;
+  height: 130px;
 }
 
 
