--- a/css/main.css
+++ b/css/main.css
@@ -38,13 +38,13 @@ body {
 	width: 620px;
 	position: relative;
 	left: 50%;
-	margin-left: -320px;
+	margin-left: -290px;
 	top: 20px;
 }
 
 .headerNav a {
 	font-size: 16px;
-	font-weight: 600;
+	font-weight: 100;
 	color: #fff;
 	font-style: normal;
 	text-decoration: none;
@@ -55,9 +55,19 @@ body {
 	margin-right: 25px;
 }
 
+.headerNav a:visited {
+  text-decoration: none;
+  color: #fff;
+}
+
+.headerNav a:focus {
+  text-decoration: none;
+  color: #fff;
+}
+
 .headerNav a:hover {
-    text-decoration: none;
-    color: #fff;
+  text-decoration: none;
+  color: #fff;
 }
 
 .headerNav a img {
@@ -219,42 +229,47 @@ body {
 	width: 100%;
 }
 
+.experience {
+  padding: 100px 160px;
+  position: relative;
+  z-index: 1000;
+  color: white;
+}
+
 .contentBlock {
 	height: 300px;
 	width: 100%;
 }
 
-.parachute {
-	background: url("../resource/ex-jump5.jpg");
-	background-size: 100%;
+.section5 {
+  width: 100%;
+  position: relative;
+  overflow: hidden;
 }
 
-.dive {
-	background: url("../resource/ex-dive2.jpg");
-	background-size: 100%;
+.section5 img {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin-top: -70px;
 }
 
-.helicopt {
-	background: url("../resource/ex-heli.jpg");
-	background-size: 100%;
+.section5 h2 {
+  font-size: 53px;
 }
 
-.activity {
-	position: relative;
-	top: 50%;
-	transform: translateY(-30%);
-	width: 900px;
-	left: 50%;
-	margin-left: -450px;
-}
-
-.activity span {
-	color: #fff;
-	font-size: 53px;
+.section5 h3 {
+  font-size: 20px;
+  font-weight: 100;
+  line-height: 1.5em;
 }
 
 .activity button {
-	margin-left: 500px;
+	margin-left: 15px;
+  margin-top: 20px;
 	color: #fff;
 	border-color: #fff;
 	border-radius: 3px;
@@ -271,6 +286,7 @@ body {
 	background: #fff;
 	color: #000;
 }
+
 
 .section6 img {
 	width: 100%;
